--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main> <h1>Tic-Tac-Toe</h1></main>
+    <div class="container">
+        <div class="game">
+         <button class="box">X</button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+         <button class="box"></button>
+        </div>
+    </div>
+    <div>
+        <button id="reset-btn">Reset Game</button>
+    </div>
+    
+
     <script src="style.css"></script>
 </body>
 </html>
